@@ -395,6 +395,42 @@ name|ShimLoader
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|metastore
+operator|.
+name|api
+operator|.
+name|FieldSchema
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|metastore
+operator|.
+name|api
+operator|.
+name|Schema
+import|;
+end_import
+
 begin_comment
 comment|/**  * CliDriver.  *  */
 end_comment
@@ -995,6 +1031,82 @@ name|String
 argument_list|>
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|HiveConf
+operator|.
+name|getBoolVar
+argument_list|(
+name|conf
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVE_CLI_PRINT_HEADER
+argument_list|)
+condition|)
+block|{
+comment|// Print the column names
+name|boolean
+name|first_col
+init|=
+literal|true
+decl_stmt|;
+name|Schema
+name|sc
+init|=
+name|qp
+operator|.
+name|getSchema
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|FieldSchema
+name|fs
+range|:
+name|sc
+operator|.
+name|getFieldSchemas
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+operator|!
+name|first_col
+condition|)
+block|{
+name|out
+operator|.
+name|print
+argument_list|(
+literal|'\t'
+argument_list|)
+expr_stmt|;
+block|}
+name|out
+operator|.
+name|print
+argument_list|(
+name|fs
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|first_col
+operator|=
+literal|false
+expr_stmt|;
+block|}
+name|out
+operator|.
+name|println
+argument_list|()
+expr_stmt|;
+block|}
 try|try
 block|{
 while|while
